@@ -170,5 +170,62 @@ array.
    </videoobject>
  </mediaobject>
 -->
+<table>
+	<tgroup cols="5">
+		<colspec colnum="1" ></colspec>
+		 <colspec colnum="2"></colspec>
+		 <colspec colnum="3"></colspec>
+		 <colspec colnum="4"></colspec>
+		 <colspec colnum="5"></colspec>
+		 <thead>
+			<row>
+				<entry> Brand </entry>
+				 <entry> License of Common Content files </entry>
+				 <entry> Default license for documents </entry>
+				 <entry> Package </entry>
+				 <entry> Comment </entry>
+			</row>
+		 </thead>
+		 <tbody>
+			<row>
+				<entry> common </entry>
+				 <entry> thisis sometext</entry>
+				 <entry> moaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaarrtext </entry>
+				 <entry> publican </entry>
+				 <entry> goat cheeese. </entry>
+			</row>
+			<row>
+				<entry> commoncommoncommoncommoncommoncommoncommoncommoncommoncommoncommoncommon </entry>
+				 <entry> thisis sometext</entry>
+				 <entry> moar text </entry>
+				 <entry> publican </entry>
+				 <entry> goat cheeese. </entry>
+			</row>
+		</tbody>
+	</tgroup>
+</table>
+<table>
+	<tgroup cols="2">
+		<colspec colnum="1" ></colspec>
+		 <colspec colnum="2"></colspec>
+		 <thead>
+			<row>
+				<entry> Brand </entry>
+				 <entry> License of Common Content files </entry>
+			</row>
+		 </thead>
+		 <tbody>
+			<row>
+				<entry> commoncommoncommoncommoncommoncommoncommoncommoncommoncommoncommoncommon </entry>
+				 <entry> thisis sometext</entry>
+			</row>
+			<row>
+				<entry> common </entry>
+				 <entry> thisis sometext</entry>
+			</row>
+		</tbody>
+	</tgroup>
+</table>
+
 </preface>
 
