@@ -5,6 +5,7 @@
 - Added tip formatting. BZ #1033830
 - Simply styling of code, and admonitions in HTML5. BZ #1093498
 - Add iframe video support to DocBook5 HTML5. BZ #752021
+- Stop calculating column width if no width is set. BZ #1084860
 
 4.1.1 Thu May 8 2014
 - Fix long tables and pre's breaking PDF build. BZ #1095574
